<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="weather"
            type= "uk.co.bigdogconsultants.stormy.CurrentWeather"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackground"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/timeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{`At ` + weather.formattedTime + ` it will be:`}"
            android:textColor="@color/halfWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/temperatureValue"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/temperatureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(weather.temperature)}"
            android:textColor="@android:color/white"
            android:textSize="150sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/degreeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/degree_symbol"
            app:layout_constraintStart_toEndOf="@+id/temperatureValue"
            app:layout_constraintTop_toTopOf="@+id/temperatureValue"
            app:srcCompat="@drawable/degree" />

        <TextView
            android:id="@+id/locationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/location_name"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/timeValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/icon_depicting_weather"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/locationValue"
            app:srcCompat="@drawable/cloudy_night" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/humidityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/label_for_the_humidity_level"
            android:text="@string/humidity_value"
            android:textColor="@color/halfWhite"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/temperatureValue" />

        <TextView
            android:id="@+id/humidityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/value_of_humidity_from_web"
            android:text="@{String.valueOf(weather.humidity) + ` %`}"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/humidityLabel"
            app:layout_constraintStart_toStartOf="@+id/humidityLabel"
            app:layout_constraintTop_toBottomOf="@+id/humidityLabel" />

        <TextView
            android:id="@+id/precipLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/label_for_the_chance_of_precip"
            android:text="@string/precipitation"
            android:textColor="@color/halfWhite"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/temperatureValue" />

        <TextView
            android:id="@+id/precipValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(weather.precipChance) + `%`}"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/precipLabel"
            app:layout_constraintStart_toStartOf="@+id/precipLabel"
            app:layout_constraintTop_toBottomOf="@+id/precipLabel" />

        <TextView
            android:id="@+id/summaryValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/weather_summary"
            android:text="@{weather.summary}"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/precipValue" />

        <TextView
            android:id="@+id/darkSkyAttribution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/dark_sky_message"
            android:textColor="@color/halfWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>